gccida/c3/record_last_set_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_last_set_info/src/gcse.c:2926:28: error: use of undeclared identifier 'machine_mode'
&& !push_operand( desta, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)desta)) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_last_set_info/src/gcse.c:2926:43: error: expected expression
&& !push_operand( desta, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)desta)) ) 
                                          ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_last_set_info/src/obj/gcse.o] Error 1
